# crap4py

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
docs/: advanced-usage.md
src/crap4py/: __init__.py  __main__.py  api.py  complexity.py  config.py  core.py  coverage_parser.py  crap.py  models.py  options.py  report.py  skill_cmd.py
tests/: test_api.py  test_complexity.py  test_config.py  test_core.py  test_coverage_parser.py  test_crap.py  test_integration.py  test_main.py  test_options.py  test_report.py  test_skill_cmd.py
tests/fixtures/basic-project/: coverage.json
tests/fixtures/basic-project/src/: math_utils.py
